menu stops fixed at the top on small screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -122,11 +122,18 @@ blockquote {
 	@media screen and (max-width: $br) {
 		display: block;
 	}
+
 	h1 {
 		font-size: 2em;
 		margin-bottom: 0;
 	}
 	ul {
+		@media screen and (max-width: 575px) {
+			position:fixed;
+			top:0px;
+			right:20px;
+			background-color: white;
+		}
 		margin-top: 10px;
 		li {
 			display: inline;
@@ -135,6 +142,7 @@ blockquote {
 		}
 	}
 }
+
 
 .blog {
 	padding-bottom: 30px;
